--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <html>
 	<head>
+		<!-- Twitter metadata -->
+		<meta name="twitter:card" content="summary_large_image">	
+		<meta name="twitter:title" content="DrumMachine">
+		<meta name="twitter:description" content="Play drums from your browser.">
+		<meta name="twitter:image" content="https://drummachine.suhailidrees.com/twitter.png">
+
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
 		<style>
 .switch {
