--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta name="twitter:card" content="summary_large_image">	
 		<meta name="twitter:title" content="DrumMachine">
 		<meta name="twitter:description" content="Play drums from your browser.">
-		<meta name="twitter:image" content="https://drummachine.suhailidrees.com/twitter.png">
+		<meta name="twitter:image" content="https://drummachine.suhailidrees.com/thumbnail.png">
 
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
 		<style>
